Fix chart dropdown label on small screens

--- a/core/app/shell/src/themes/suite8/css/components/_widget.scss
+++ b/core/app/shell/src/themes/suite8/css/components/_widget.scss
@@ -135,4 +135,10 @@
   .chart-loading {
     height: 100px;
   }
+
+  .chart-select {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    padding-right: 1.5rem !important;
+  }
 }
